# aidock_backend

./: .cursorrules  .gitignore  README.md  app.py  auth.py  chat_request.py  context_docs.db  context_docs.py  context_docs_routes.py  init_db.py  organization_routes.py  prompt.py  pyproject.toml  requirements.txt  routes_auth_for_admin_pages.py  routes_auth_helpers.py  routes_authentication_for_dock.py  routes_chat_prompt_for_dock.py  routes_context_docs_for_platform_admin.py  routes_files.py  routes_librarian.py  routes_librarian_users.py  routes_organization_crud_for_platform_admin.py  routes_platform_admin_pages.py  routes_profile.py  routes_superuser.py  routes_title_prompt_for_dock.py  routes_user_crud_for_platform_admin.py  user_model.py  user_routes.py
controllers/: login.py  logout.py
db/: context_docs.py  conversation_model.py  file_model.py  init_db.py  organization_model.py  prompt_history.py  settings_model.py  user_model.py
helpers_for_inference/: prompt.py
lavendel_frontend/: base.html  context_docs.html  create_user.html  edit_doc.html  edit_user.html  user_detail.html  users.html
lavendel_frontend/organizations/: create.html  edit.html  list.html
lavendel_frontend/superuser_ui/: context_docs.html  create_user.html  edit_doc.html  edit_user.html  prompt_history.html  user_detail.html  view_organization.html
prompting/: chatgpt.py  claude.py  hub.py
routes/: __init__.py  auth.py
templates/: base.html  base_librarian.html  base_user.html  librarian_websites.html  login.html  profile.html  user_files.html  user_websites.html
(+39 files in other folders)
