[tool.poetry]
name = "lavendel-backend"
version = "0.1.0"
description = ""
authors = ["Caleb <calebcauthon@gmail.com>"]
readme = "README.md"
packages = [{include = "lavendel_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
anthropic = "^0.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
